Fix overflow style

--- a/src/main/styles/neo4jd3.scss
+++ b/src/main/styles/neo4jd3.scss
@@ -25,7 +25,8 @@ body {
     margin: 0px;
 }
 
-html, .neo4jd3 { 
+html,
+#neo4jd3 {
     height: 100%; 
     overflow: hidden; 
 }
